<resources>
    <string name="app_name">RickiMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page">page :</string>
    <string name="_42">/42</string>
    <string name="status">status:</string>
    <string name="species">species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="character_image">character image</string>
    <string name="textview">TextView</string>
</resources>